--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 tokio = { version = "1", features = ["full"] }
 clap = { version = "3.2.22", features = ["derive", "color"] }
 openapi = { path = "./openapi" }
+log = { version = "0.4" }
+env_logger = "0.9.0"
+simplelog = { version = "^0.11.0", features = ["paris"] }
