--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 clap = { version = "3.2.22", features = ["derive", "color"] }
-openapi = { path = "./openapi" }
 log = { version = "0.4" }
 simplelog = { version = "^0.11.0", features = ["paris"] }
 walkdir = { version = "2.3.2" }
 colored = "2"
+# openapi = { path = "./openapi" }
+openapi = { git = "https://github.com/immich-app/immich-sdk-rust" }
