Correctly filter ALL file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ openapi = { path = "./openapi" }
 itertools = "0.10.5"
 chrono = "0.4.22"
 reqwest = { version = "0.11.12", features = ["stream", "multipart", "json"] }
+indicatif = { version = "0.17" }
