--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 mime = { version = "0.3" }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.3", features = ["codec"] }
-clap = { version = "3.2.22", features = ["derive", "color"] }
+clap = { version = "4.0.10", features = ["derive", "color"] }
 log = { version = "0.4" }
-simplelog = { version = "^0.11.0", features = ["paris"] }
+simplelog = { version = "0.12.0", features = ["paris"] }
 walkdir = { version = "2.3.2" }
 colored = "2"
 openapi = { path = "./openapi" }
@@ -19,3 +19,4 @@ itertools = "0.10.5"
 chrono = "0.4.22"
 reqwest = { version = "0.11.12", features = ["stream", "multipart", "json"] }
 indicatif = { version = "0.17" }
+kamadak-exif = "0.5.4"
